Ajustes no html e no css

--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
 <body>
     <main class="container">
         <header class="content">
-            <div class="text">
-                <span>ROCK</span>
-                <span>PAPER</span>
-                <span>SCISSORS</span>
+            <div class="logo">
+                <img src="src/assets/images/logo.svg" alt="logo">
             </div>
 
             <div class="score">
